--- a/styles.css
+++ b/styles.css
@@ -24,30 +24,26 @@ html {
 
 .navbar {
     width: 100%;
-    background-color: rgb(235, 235, 235);
-    height: 55px;
+    background-color: rgba(81, 177, 251, 0.51);
+    height: 62px;
     display: flex;
     flex: row;
     justify-content: space-around;
+    align-items: center;
     gap: 220px;
 }
 
+.active {
+    color: rgb(255, 255, 255);
+    background-color: rgba(158, 187, 255, 0.700);
+}
+
 .logo-container {
-    margin-top: 12px;
-    width: 300px;
+    margin-left: 30px;
 }
 
-.logo-container a {
-    color: rgb(73, 73, 73);
-    font-family: 'Montserrat', sans-serif;
-    font-size: 26px;
-    font-weight: 700;
-    text-decoration: none;
-    padding-left: 32px;
-}
-
-.logo-container a:hover {
-    color: rgb(99, 121, 189);
+.logo-container img {
+    padding-top: 2px;
 }
 
 .navbar-list {
@@ -58,7 +54,7 @@ html {
     list-style-type: none;
     margin: 0;
     overflow: hidden;
-    background-color: rgb(235, 235, 235);
+    background-color: transparent;
 }
 
 .navbar-list li {
@@ -70,99 +66,67 @@ html {
     color: rgb(73, 73, 73);
     font-weight: 600;
     text-align: center;
-    padding: 16px 25px 12px 25px;
+    padding: 20px 25px 18px 25px;
     font-size: 20px;
     text-decoration: none;
     font-family: "Montserrat", sans-serif;
 }
 
 .navbar-list li a:hover {
-    color: rgb(99, 121, 189);
+    color: rgb(255, 255, 255);
+    background-color: rgb(197, 229, 253);
 }
 
 
 
 
+/* WORK SECTION */
 
-
-
-
-
-/* CAROUSEL SECTION */
-
-.slideshow {
-    background-color: rgb(235, 235, 235);
-    height: 94vh;
-    padding-top: 36px;
-    font-family: 'Montserrat', sans-serif;
-}
-
-.mySlides {
-    display: none;
-    box-shadow: 10px 10px 10px #6c6c6c;
-}
-
-.mySlides img {
-    vertical-align: middle;
-    width: 100%;
-    border-radius: 10px;
-    -webkit-filter: blur(4px);
-    filter: blur(1.25px);
-}
-
-.slideshow-container {
+.work-container {
     max-width: 1350px;
-    position: relative;
     margin: auto;
+    font-family: 'Montserrat', sans-serif;
+    padding-top: 60px;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: center;
+    gap: 50px;
+    padding-bottom: 100px;
 }
 
-.text a {
-    color: rgb(99, 121, 189);
-    font-size: 32px;
-    padding: 8px 12px;
-    position: absolute;
-    left: 41%;
-    top: 48%;
-    text-decoration: none;
-    font-family: 'Quantico', sans-serif;
-    font-weight: 600;
-    border: 1px solid transparent;
-    border-radius: 5px;
-    background-color: rgb(235, 235, 235);
+.work-title h2 {
+    font-size: 40px;
+    text-align: center;
+    font-family: 'Montserrat', sans-serif;
+    margin-top: 50px;
 }
 
-.numbertext {
-    color: #f2f2f2;
-    font-size: 12px;
-    padding: 8px 12px;
-    position: absolute;
-    top: 0;
+.work-container a {
+    cursor: pointer;
 }
 
-.dot {
-    height: 15px;
-    width: 15px;
-    margin: 15px 2px;
-    background-color: #bbb;
-    border-radius: 50%;
-    display: inline-block;
-    transition: background-color 0.6s ease;
+.work-container h3 {
+    font-size: 20px;
+    margin-top: 20px;
 }
 
-.active {
-    background-color: #717171;
+.work-container img {
+    width: 650px;
+    height: 410px;
+    border-radius: 10px;
+    box-shadow: 2px 3px 10px rgb(10, 53, 86);
 }
 
-.fade {
-    animation-name: fade;
-    animation-duration: 1.5s;
+.zoom {
+    transition: transform .2s;
 }
 
-@keyframes fade {
-    from {opacity: .4}
-    to {opacity: 1}
+.zoom:hover {
+    -ms-transform: scale(1.06);
+    -webkit-transform: scale(1.06);
+    transform: scale(1.06);
 }
-
 
 
 
@@ -173,6 +137,48 @@ html {
 
 /* ABOUT SECTION */
 
+.navbar-about {
+    width: 100%;
+    background-color: rgba(237, 237, 237, 0.393);
+    height: 62px;
+    display: flex;
+    flex: row;
+    justify-content: space-around;
+    align-items: center;
+    gap: 220px;
+}
+
+.navbar-list-about {
+    width: 370px;
+}
+
+.navbar-list-about ul {
+    list-style-type: none;
+    margin: 0;
+    overflow: hidden;
+    background-color: transparent;
+}
+
+.navbar-list-about li {
+    float: left;
+}
+
+.navbar-list-about li a {
+    display: block;
+    color: rgb(73, 73, 73);
+    font-weight: 600;
+    text-align: center;
+    padding: 20px 25px 18px 25px;
+    font-size: 20px;
+    text-decoration: none;
+    font-family: "Montserrat", sans-serif;
+}
+
+.navbar-list-about li a:hover {
+    color: rgb(255, 255, 255);
+    background-color: rgba(158, 187, 255, 0.700);
+}
+
 
 .about {
     background-image: linear-gradient(rgba(158, 187, 255, 0.701), rgba(255, 255, 255));
@@ -181,7 +187,6 @@ html {
 .about-container {
     max-width: 1350px;
     margin: auto;
-    height: 100vh;
     font-family: 'Montserrat', sans-serif;
     padding-top: 60px;
 }
@@ -207,7 +212,7 @@ html {
 
 .about-container p {
     font-size: 20px;
-    padding-bottom: 30px;
+    padding-bottom: 15px;
     line-height: 1.75;
     font-weight: 500;
 }
@@ -219,18 +224,27 @@ html {
 
 .btn-linkedin {
     text-decoration: none;
-    font-size: 18px;
+    font-size: 22px;
     border: 1px solid transparent;
     border-radius: 5px;
-    padding: 8px;
+    padding: 10px;
     background-color: rgb(99, 121, 189);
     color: white;
     box-shadow: 2px 2px 10px rgb(64, 80, 126);
 }
 
+.contact-links {
+    display: block;
+}
 
+.linkedin {
+    display: inline-block;
+    margin-right: 10px;
+}
 
-
+.back {
+    display: inline-block;
+}
 
 
 
@@ -247,7 +261,7 @@ html {
     margin: auto;
 }
 
-.work-container {
+.project1-work-container {
     background-color: white;
 }
 
@@ -301,7 +315,7 @@ html {
     margin: auto;
 }
 
-.work-title h2 {
+.work-progress-title h2 {
     font-size: 30px;
     color:rgb(29, 29, 29);
     margin-top: 50px;
@@ -309,7 +323,7 @@ html {
     padding-bottom: 30px;
 }
 
-.work-title img {
+.work-progress-title img {
     width: 1350px;
     height: auto;
 }
@@ -461,8 +475,306 @@ html {
     border-radius: 10px;
     background-color: black;
     color: white;
-    font-size: 20px;
-    padding: 10px 15px;
+    font-size: 18px;
+    padding: 10px;
     font-family: 'Montserrat', sans-serif;
     font-weight: 500;
+}
+
+
+
+
+
+/* PROJECT 2 */
+
+.project2-section1 {
+    font-family: 'Montserrat', sans-serif;
+    width: 1350px;
+    margin: auto;
+    background-color: white;
+}
+
+.project2-hero-title {
+    margin-top: 75px;
+}
+
+.project2-hero img {
+    width: 1350px;
+    height: 750px;
+    margin: 0 auto;
+    border-radius: 10px;
+    box-shadow: 10px 10px 10px #6c6c6c;
+}
+
+.project2-description {
+    margin-top: 60px;
+}
+
+.project2-description h2 {
+    font-size: 30px;
+    color:rgb(40, 40, 40);
+    padding-bottom: 30px;
+    padding-top: 30px;
+}
+
+.project2-description p {
+    font-size: 22px;
+}
+
+
+
+.project2-section2 {
+    background-image: linear-gradient(rgba(13, 106, 245, 0.5), rgba(136, 199, 210, 0.5));
+}
+
+.project2-workprocess {
+    font-family: 'Montserrat', sans-serif;
+    width: 1350px;
+    margin: auto;
+    margin-top: 75px;
+}
+
+.project2-workprocess-title h2 {
+    padding-top: 40px;
+    font-size: 30px;
+}
+
+.project2-workprocess p {
+    margin-top: -60px;
+    margin-bottom: 60px;
+}
+
+.project2-main-menu {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    gap: 40px;
+}
+
+.project2-main-menu-title h3 {
+    margin-top: 50px;
+    font-size: 22px;
+    margin-bottom: -40px;
+}
+
+.main-menu-wf img {
+    width: 350px;
+    height: 650px;
+}
+
+.main-menu-mockup img {
+    width: 550px;
+    height: 900px;
+}
+
+
+.project2-leaderboard-title h3 {
+    font-size: 22px;
+    margin-bottom: -40px;
+}
+
+.project2-leaderboard {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    gap: 40px;
+}
+
+.leaderboard-wf img {
+    width: 350px;
+    height: 650px;
+}
+
+.leaderboard-mockup img {
+    width: 550px;
+    height: 900px;
+}
+
+
+.project2-micro-transaction-title h3 {
+    font-size: 22px;
+    margin-bottom: -40px;
+}
+
+.project2-monetization {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    gap: 40px;
+}
+
+.micro-transaction-wf img {
+    width: 350px;
+    height: 650px;
+}
+
+.micro-transaction-mockup img {
+    width: 550px;
+    height: 900px;
+}
+
+.project2-final-mockup-title h3 {
+    font-size: 22px;
+    margin-bottom: -40px;
+}
+
+
+.project2-final-mockup {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    margin-left: 100px;
+}
+
+.project2-final-mockup img {
+    width: 550px;
+    height: 900px;
+    margin-left: -201px;
+}
+
+.project2-outcomes-postMortem {
+    font-family: 'Montserrat', sans-serif;
+    width: 1350px;
+    margin: auto;
+    margin-top: 75px;
+}
+
+
+
+
+
+
+
+/* PROJECT 4 */
+
+.project4-section1 {
+    font-family: 'Montserrat', sans-serif;
+    width: 1350px;
+    margin: auto;
+    background-color: white;
+    margin-bottom: 50px;
+}
+
+.project4-hero-title {
+    margin-top: 75px;
+}
+
+.project4-hero img {
+    width: 1350px;
+    height: 750px;
+    margin: 0 auto;
+    border-radius: 10px;
+    box-shadow: 10px 10px 10px #6c6c6c;
+}
+
+.project4-description {
+    margin-top: 60px;
+}
+
+.project4-description h2 {
+    font-size: 30px;
+    color:rgb(40, 40, 40);
+    padding-bottom: 30px;
+    padding-top: 40px;
+}
+
+.project4-description p {
+    font-size: 22px;
+}
+
+.project4-section2 {
+    background-image: linear-gradient(rgba(235, 235, 235, 0.9), rgba(217, 217, 217,0.9));
+}
+
+.project4-workprocess {
+    font-family: 'Montserrat', sans-serif;
+    width: 1350px;
+    margin: auto;
+}
+
+.project4-workprocess-title h2 {
+    font-size: 30px;
+    color:rgb(40, 40, 40);
+    padding-bottom: 30px;
+    padding-top: 30px;
+}
+
+.painpoint-COD h2 {
+    font-size: 26px;
+    color:rgb(40, 40, 40);
+    padding-bottom: 30px;
+    padding-top: 30px;
+    margin-left: 15px;
+}
+
+.painpoint-COD img {
+    width: 1350px;
+    height: auto;
+    padding-bottom: 20px;
+}
+
+.project4-section3 {
+    background-image: linear-gradient(rgba(217, 217, 217,0.9), rgba(155, 155, 155,0.9));
+}
+
+.project4-wireframe {
+    font-family: 'Montserrat', sans-serif;
+    width: 1350px;
+    margin: auto;
+}
+
+.project4-wireframe h2 {
+    font-size: 26px;
+    color:rgb(40, 40, 40);
+    padding-bottom: 30px;
+    padding-top: 30px;
+    margin-left: 15px;
+}
+
+.project4-wireframe img {
+    width: 1350px;
+    height: auto;
+    padding-bottom: 20px;
+}
+
+.project4-wireframe p {
+    padding-bottom: 25px;
+    font-size: 16px;
+    color: black;
+    margin-left: 20px;
+}
+
+.project4-section4 {
+    background-image: linear-gradient(rgba(155, 155, 155,0.9), rgba(217, 217, 217,0.9));
+}
+
+.project4-ui-mockup {
+    font-family: 'Montserrat', sans-serif;
+    width: 1350px;
+    margin: auto;
+}
+
+.project4-ui-mockup h2 {
+    font-size: 26px;
+    color:rgb(40, 40, 40);
+    padding-bottom: 30px;
+    padding-top: 30px;
+    margin-left: 15px;
+}
+
+.project4-ui-mockup img {
+    width: 1350px;
+    height: auto;
+    padding-bottom: 20px;
+}
+
+.project4-ui-mockup p {
+    padding-bottom: 25px;
+    font-size: 16px;
+    color: black;
+    margin-left: 20px;
 }
