--- a/styles.css
+++ b/styles.css
@@ -83,6 +83,7 @@ html {
 
 .hero-home-page-container {
     background-color: rgb(98, 187, 255);
+    box-shadow: 2px 2px 10px rgb(113, 113, 113);
 }
 
 .hero-home-page-title {
